--- a/portfolio.html
+++ b/portfolio.html
@@ -116,7 +116,7 @@
         </ul>
     </nav>
     <div class="portfolio">
-        <h1>Porfólio</h1>
+        <h1>Portfólio</h1>
         <hr>
         <h2>Jogo de Ping Pong</h2>
         <img src="imagens/ping-pong.PNG" alt="" width="600px" height="400px">
